5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4161/executions/1723_2505.log
== TEST (2019-05-10 22:00:53) 
-- CODE:
from math import*
a = float(input("angulo: "))
k = int(input("serie: "))
t = 0
while (t<k):
	sen = x**(1+2*t)/factorial(1+2*t)
	t = t + 1
print(round(sen, 10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = float(input())
ValueError: could not convert string to float: 'pi/2'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 22:01:29) 
-- CODE:
from math import*
a = float(radians(input("angulo: ")))
k = int(input("serie: "))
t = 0
while (t<k):
	sen = x**(1+2*t)/factorial(1+2*t)
	t = t + 1
print(round(sen, 10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = float(radians(input()))
TypeError: must be real number, not str
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 22:02:11) 
-- CODE:
from math import*
a = radians(eval(input("angulo: ")))
k = int(input("serie: "))
t = 0
while (t<k):
	sen = x**(1+2*t)/factorial(1+2*t)
	t = t + 1
print(round(sen, 10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    sen = x**(1+2*t)/factorial(1+2*t)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 22:02:48) 
-- CODE:
from math import*
x = radians(eval(input("angulo: ")))
k = int(input("serie: "))
t = 0
while (t<k):
	sen = x**(1+2*t)/factorial(1+2*t)
	t = t + 1
print(round(sen, 10))
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 22:03:36) 
-- CODE:
from math import*
x = (eval(input("angulo: ")))
k = int(input("serie: "))
t = 0
while (t<k):
	sen = x**(1+2*t)/factorial(1+2*t)
	t = t + 1
print(round(sen, 10))
-- OUTPUT:
0.0001604412
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 22:04:04) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("serie: "))
t = 0
while (t<k):
	sen = x**(1+2*t)/factorial(1+2*t)
	t = t + 1
print(round(sen, 10))
-- OUTPUT:
0.0001604412
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 22:07:43) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("serie: "))
t = 0
sen = 0
while (t<k):
	if (t%2 != 0):
		sen = sen + x**(1+2*t)/factorial(1+2*t)
		t = t + 1
	else:
		sen = sen + x**(1+2*t)/factorial(1+2*t)
		t = t + 1
print(round(sen, 10))
-- OUTPUT:
2.3012952459
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 22:08:09) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("serie: "))
t = 0
sen = 0
while (t<k):
	if (t%2 != 0):
		sen = sen + x**(1+2*t)/factorial(1+2*t)
		t = t + 1
	else:
		sen = sen - x**(1+2*t)/factorial(1+2*t)
		t = t + 1
print(round(sen, 10))
-- OUTPUT:
-1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 22:08:42) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("serie: "))
t = 0
sen = 0
while (t<k):
	if (t%2 != 0):
		sen = sen + x**(1+2*t)/factorial(1+2*t)
		t = t + 1
	else:
		sen = sen - x**(1+2*t)/factorial(1+2*t)
		t = t + 1
print(round(sen, 10))
-- OUTPUT:
-1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 22:08:55) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("serie: "))
t = 0
sen = 0
while (t<k):
	if (t%2 != 0):
		sen = sen + x**(1+2*t)/factorial(1+2*t)
		t = t + 1
	else:
		sen = sen - x**(1+2*t)/factorial(1+2*t)
		t = t + 1
print(round(sen, 10))
-- OUTPUT:
-1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 22:09:07) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("serie: "))
t = 0
sen = 0
while (t<k):
	if (t%2 != 0):
		sen = sen + x**(1+2*t)/factorial(1+2*t)
		t = t + 1
	else:
		sen = sen - x**(1+2*t)/factorial(1+2*t)
		t = t + 1
print(round(sen, 10))
-- OUTPUT:
-1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 22:09:35) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("serie: "))
t = 0
sen = 0
while (t<k):
	if (t%2 != 0):
		sen = sen + x**(1+2*t)/factorial(1+2*t)
		t = t + 1
	else:
		sen = sen - x**(1+2*t)/factorial(1+2*t)
		t = t + 1
print(round((-1)*sen, 10))
-- OUTPUT:
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-10 22:09:41) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("serie: "))
t = 0
sen = 0
while (t<k):
	if (t%2 != 0):
		sen = sen + x**(1+2*t)/factorial(1+2*t)
		t = t + 1
	else:
		sen = sen - x**(1+2*t)/factorial(1+2*t)
		t = t + 1
print(round((-1)*sen, 10))
-- EXECUTION TIME:
0.141394
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
1.0000035426
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-0.9998431014
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.8662952838
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
